# rulett

./: Cargo.toml  Color_1000.txt  Color_10000.txt  Color_100000.txt  Color_1000000.txt  Color_10000000.txt  Column_1000.txt  Column_10000.txt  Column_100000.txt  Column_1000000.txt  Column_10000000.txt  Corner_1000.txt  Corner_10000.txt  Corner_100000.txt  Corner_1000000.txt  Corner_10000000.txt  Dozen_1000.txt  Dozen_10000.txt  Dozen_100000.txt  Dozen_1000000.txt  Dozen_10000000.txt  EvenOdd_1000.txt  EvenOdd_10000.txt  EvenOdd_100000.txt  EvenOdd_1000000.txt  EvenOdd_10000000.txt  Line_1000.txt  Line_10000.txt  Line_100000.txt  Line_1000000.txt  Line_10000000.txt  LowHigh_1000.txt  LowHigh_10000.txt  LowHigh_100000.txt  LowHigh_1000000.txt  LowHigh_10000000.txt  README.md  Split_1000.txt  Split_10000.txt  Split_100000.txt  (+18 more)
src/: main.rs
