[package]
name = "rulett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum_macros = "0.25"

# You can also access strum_macros exports directly through strum using the "derive" feature
strum = { version = "0.25", features = ["derive"] }
clap = { version = "3.1", features = ["derive"] }
